<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecogerImagenes">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/nuevoImageView"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtImageName"
        android:hint="@string/titulo_imagen"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:onClick="btnBrowse_click"
        android:text="@string/buscar_imagen" />

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:onClick="btnUpload_click"
        android:text="@string/subirimagen" />


</LinearLayout>