<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <Button
        android:id="@+id/butEuropa"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="104dp"
        android:layout_height="98dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="104dp"
        android:background="@color/colorAccent"
        android:text="@string/europa"
        android:textColor="@color/negro" />

    <Button
        android:id="@+id/butNorAm"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="104dp"
        android:layout_height="98dp"
        android:layout_above="@+id/butAsia"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="113dp"
        android:layout_toEndOf="@+id/butEuropa"
        android:background="@color/colorAccent"
        android:text="@string/america_norte"
        android:textColor="@color/negro" />

    <Button
        android:id="@+id/butSurAm"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="104dp"
        android:layout_height="98dp"
        android:layout_below="@+id/butEuropa"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="113dp"
        android:layout_marginBottom="98dp"
        android:background="@color/colorAccent"
        android:text="@string/america_sur"
        android:textColor="@color/negro" />

    <Button
        android:id="@+id/butAsia"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="104dp"
        android:layout_height="98dp"
        android:layout_alignTop="@+id/butSurAm"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="98dp"
        android:layout_toEndOf="@+id/butSurAm"
        android:background="@color/colorAccent"
        android:text="@string/asia"
        android:textColor="@color/negro" />
</RelativeLayout>