<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentoOtros"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/puntuar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:elevation="8dp"
            android:gravity="center"
            android:text="@string/puntua"
            android:textColor="@color/blanco"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <ImageView
            android:id="@+id/imagenEstrella"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/puntua"
            android:elevation="8dp"
            android:src="@android:drawable/star_big_off" />
    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ubi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:elevation="8dp"
                android:gravity="center"
                android:text="@string/ubicacion"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <ImageView
                android:id="@+id/imagenMapa"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/mapa"
                android:elevation="8dp"
                android:src="@drawable/map" />


        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="25dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:elevation="8dp"
                android:gravity="center"
                android:text="@string/galeria"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <ImageView
                android:id="@+id/imagenGaleria"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/galeria"
                android:elevation="8dp"
                android:src="@android:drawable/ic_menu_gallery" />


        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="25dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/chat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:elevation="8dp"
                android:gravity="center"
                android:text="@string/chateo"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <ImageView
                android:id="@+id/imagenChat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/chateo"
                android:elevation="8dp"
                android:src="@android:drawable/sym_action_chat" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
